--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-joblib
-matplotlib
-numpy
-pandas
-scikit-learn
-seaborn
+joblib==1.4.2
+matplotlib==3.10.0
+numpy==2.2.2
+pandas==2.2.3
+scikit-learn==1.6.1
+seaborn==0.13.2
 streamlit
